fix: Corrige la ruta del logo en el reporte PDF

--- a/src/templates/perfil_operacion.html
+++ b/src/templates/perfil_operacion.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div id="header-logo">
-        <img src="file:///C:/Users/rguti/Inandes.TECH/inputs_para_generated_pdfs/LOGO.png" alt="Logo">
+                <img src="static/logo_inandes.png" alt="Logo">
     </div>
     {% for invoice in invoices %}
     <div class="invoice-page">
