feat: Center summary liquidation table in annex template

--- a/src/templates/anexo_liquidacion.html
+++ b/src/templates/anexo_liquidacion.html
@@ -71,7 +71,7 @@
         }
         .summary-container {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center; /* Centered summary table */
             align-items: flex-start;
         }
         .summary-table {
